--- a/app/Gemfile
+++ b/app/Gemfile
@@ -6,3 +6,5 @@ git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 # gem "rails"
 
 gem 'berkshelf'
+gem "test-kitchen"
+gem "kitchen-vagrant"
